# triangulation-graph

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  Timer.hpp  benchmark.ipynb  benchmark_TriangulationFlipGraph.cpp  benchmark_main.cpp  bm_triangulation_flip_graph.cpp  timer_TriangulationFlipGraph.cpp
cmake/: FetchAbseil.cmake  FetchBenchmark.cmake  FetchCLI11.cmake  FetchFmtLib.cmake  FetchGoogleTest.cmake  FetchSpdLog.cmake  FetchTbb.cmake
src/: Factory.hpp  MeshCell.cpp  MeshCell.hpp  MeshCells.cpp  MeshCells.hpp  MeshTriangulation.cpp  MeshTriangulation.hpp  Point.cpp  Point.hpp  TriangulationFlipGraph.cpp  TriangulationFlipGraph.hpp  Utils.hpp  main.cpp  measure.cpp  mesh_cell.h  mesh_triangulation_2d.h  mesh_triangulation_2d.inl  test.cpp  triangulation_flip_graph.h  triangulation_flip_graph.inl  vec2.h
src/utils/: algorithm.h  hash.h  restorer.h  timer.h
tests/: CMakeLists.txt  Factory.hpp  test.cpp  unit_MeshTriangulation.cpp  unit_Point.cpp  unittest_MeshTriangulation.cpp  unittest_Point.cpp
